# juce_template

./: .gitmodules  CMakeLists.txt  newproject_build_script.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
